--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: #07182B;
-    color: #fff;
+    background-color: #f4f6f6;
+    color: #000;
     font-family: Arial, sans-serif;
     text-align: center;
 }
@@ -13,19 +13,19 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     padding: 20px;
+    padding-top: 50px;
 }
 
 .logo {
-    max-width: 250px;
+    max-width: 350px;
     height: auto;
 }
 
 .message {
     margin-top: 20px;
-    font-size: 1.5em;
+    font-size: 0.8em;
 }
 
 .cf-error-details {
@@ -55,13 +55,15 @@ div#footer-text {
 h1 {
     display: none;
 }
-
+p {
+    font-size: 0.8em;
+}
 .main-content {
-    font-size: 1.5em;
+    font-size: 0.8em;
 }
 
 .main-para {
-    font-size: 1.5em;
+    font-size: 0.8em;
 }
 
 .ray-id {
@@ -92,8 +94,8 @@ h1 {
 .preloader span {
     display: block;
     position: absolute;
-    width: 2em;
-    height: 2em;
+    width: 1em;
+    height: 1em;
     border: 0.1em solid #1fe88a;
     border-radius: 50%;
     animation: ripple 2s ease-out infinite;
